<?xml version="1.0" encoding="utf-8"?>

<!-- Preferences -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:id="@+id/preference_screen">

    <PreferenceCategory android:title="@string/theme">
        <Preference
            android:key="preferenceColor"
            android:title="@string/changetheme"
            android:summary="@string/select_color"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/support">
        <Preference
            android:key="preferenceSupport"
            android:title="@string/support"
            android:summary="@string/supportsum"/>
        <Preference
            android:key="preferenceAbout"
            android:title="@string/action_about"
            android:summary="@string/action_aboutsum"/>
    </PreferenceCategory>

    <!-- preferences -->


</PreferenceScreen>