<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                xmlns:app="http://schemas.android.com/apk/res-auto"

                android:background="@drawable/login"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
    >

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:fillViewport="true"
        android:layout_alignParentBottom="true"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layoutuser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="170dp"
                android:textColorHint="#FFF"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                <EditText

                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@mipmap/account"
                    android:drawablePadding="5dp"
                    android:ems="10"
                    android:hint="@string/edtuser"


                    android:inputType="textEmailAddress"
                    android:padding="10dp"

                    android:paddingLeft="0dp"
                    android:textColor="#FFF"
                    android:textColorHighlight="@color/bg_screen1"/>


            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/layoutpass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layoutuser"
                android:layout_marginTop="10dp"
                android:textColorHint="#FFF"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                >

                <EditText

                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:drawableStart="@mipmap/lock"
                    android:drawablePadding="5dp"
                    android:ems="10"
                    android:hint="@string/edtpass"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:paddingLeft="0dp"
                    android:textColor="#FFF"
                 android:textColorLink="@color/bg_screen1"

                    />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layoutpass"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:background="@drawable/selector_xml_btn_yellow"
                android:textColor="@color/material_white"
                android:text="@string/login"/>

            <Button
                android:id="@+id/forgot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="false"
                android:layout_alignParentEnd="false"
                android:background="#00000000"
                android:layout_alignParentStart="false"
                android:layout_alignParentTop="false"
                android:layout_below="@id/button"
                android:layout_centerHorizontal="true"

                android:layout_marginTop="40dp"
                android:text="@string/btn_forgot"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FFF"/>

            <Button
                android:id="@+id/buttonRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"

                android:layout_below="@id/forgot"
                android:layout_marginTop="40dp"
                android:layout_centerHorizontal="true"

                android:text="@string/register"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FFF"/>

        </RelativeLayout>

    </ScrollView>
</RelativeLayout>

